# yuantus-plm

./: .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  Makefile  README.md  SECURITY.md  alembic.identity.ini  alembic.ini  alembic_tenant.ini  conftest.py  docker-compose.cad-connector.yml  docker-compose.cad-extractor.yml  docker-compose.cadgf.yml  docker-compose.dev.yml  docker-compose.ecm-publish.yml  docker-compose.mt.yml  docker-compose.no-cad-extractor.yml  docker-compose.profile-base.yml  docker-compose.profile-collab.yml  docker-compose.profile-combined.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini
configs/: perf_gate.json
contracts/: README.md  cad_connector_convert.schema.json  cad_extractor_extract.schema.json  cad_ml_vision_analyze.schema.json  claude_allowed_paths.json  dedupcad_vision_search_v2.schema.json
docs/: ADR_CAD_DESKTOP_CLIENT_BOUNDARIES_20260630.md  ADR_PLM_CORE_CONVERGENCE_ECO_WRITE_PATH.md  ARAS_PARITY_SCORECARD.md  BENCHMARK_CHILD_CHECKLIST_TEMPLATE_20260321.md  BENCHMARK_TARGET_MATRIX_20260321.md  BOM_COMPARE_FIELD_MAPPING.md  BRANCH_CLOSEOUT_SUMMARY_20260409.md  BREAKAGE_HELPDESK_TRACEABILITY_READING_GUIDE_20260405.md  CADGF_CONVERSION_DESIGN.md  CADGF_CONVERSION_VERIFICATION.md  CADGF_PREVIEW_BRIDGE_DESIGN.md  CADGF_PREVIEW_BRIDGE_VERIFICATION.md  CADGF_PREVIEW_DEPLOYMENT.md  CADGF_PREVIEW_ENV.md  CADGF_PREVIEW_RELEASE_CHECKLIST.md  CADGF_PREVIEW_SAMPLE_MATRIX.md  CADGF_RENDER_HINTS.md  CAD_CONNECTORS.md  CAD_EXTRACTOR_COVERAGE_JCB1.md  (+1711 more)
(+1776 files in other folders)
